--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node server/dist/server.js",
-    "start": "tsc && node server/dist/server.js"
+    "dev": "cross-env NODE_ENV=development tsc && node server/dist/server.js",
+    "build": "tsc",
+    "start": "cross-env NODE_ENV=production node server/dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,14 @@
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "cross-env": "^7.0.3",
     "prisma": "^6.2.1"
   }
 }
