--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["server/src/**/*"],
+	"exclude": ["node_modules", "**/*.spec.ts", "client"]
 }
