--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsc && node server/dist/server.js",
+    "dev": "tsc && cross-env NODE_ENV=development node server/dist/server.js",
     "build": "tsc",
     "start": "cross-env NODE_ENV=production node server/dist/server.js"
   },
