--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "skipLibCheck": true
   },
   "include": ["server/src/**/*"],
-	"exclude": ["node_modules", "**/*.spec.ts", "client"]
+	"exclude": ["node_modules"]
 }
